--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='/svelte-test/favicon.png'>
+	<link rel='stylesheet' href='svelte-test/global.css'>
+	<link rel='stylesheet' href='/svelte-test/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='/svelte-test/build/bundle.js'></script>
 </head>
 
 <body>
